Update on openpayd settings
